Created page with "Logcheck"

--- a/Logcheck%2Fes.mw
+++ b/Logcheck%2Fes.mw
@@ -1,45 +1,43 @@
 <languages />
 
-{{Metadata|abstract=Esta guía muestra cómo analizar los registros del sistema con logcheck.}}
+{{Metadata|abstract=This guide shows you how to analyze system logs with logcheck.}}
 
-Esta guía muestra cómo analizar los registros del sistema con logcheck.
+This guide shows you how to analyze system logs with logcheck.
 
-== Comenzar con logcheck ==
+== Getting Started With logcheck ==
 
-=== Preliminares ===
+=== Background ===
 
-{{Package|logcheck}} es una versión actualizada de {{Package|logsentry}} (del paquete <code>sentrytools</code>), que es una herramienta para analizar los registros del sistema. Además logcheck viene con una base de datos de mensajes de registro comunes y sin interés para filtrar el ruido. La idea general de la herramienta es que todos los mensajes son interesantes excepto aquellos
-marcados explícitamente como ruido. logcheck envía periódicamente un mensaje de correo electrónico con un resumen de los mensajes interesantes.
+<code>logcheck</code> is an updated version of<code>logsentry</code> (from the<code>sentrytools</code> package), which is a tool to analyze the system logs. Additionally,<code>logcheck</code> comes with a built-in database of common, not-interesting log messages to filter out the noise. The general idea of the tool is that all messages are interesting, except the ones explicitly marked as noise.<code>logcheck</code> periodically sends you an e-mail with a summary of interesting messages. 
 
-=== Instalar logcheck ===
+=== Installing logcheck ===
 
-{{Important/es|Es muy recomendable eliminar logsentry si lo tiene instalado en su sistema. Además, deberá eliminar {{Path|/etc/logcheck}} para evitar problemas de permisos y colisiones de ficheros.}}
+{{Important|It is strongly recommended to remove logsentry if you have it installed on your system. Additionally, you should remove /etc/logcheck to avoid permission and file collision problem.}}
 
 {{RootCmd|emerge -c logsentry}}
 
 {{RootCmd|rm -rf /etc/logcheck}}
 
-Ahora puede proceder con la instalación de logcheck. 
+Now you can proceed with the installation of logcheck. 
 
 {{Emerge|app-admin/logcheck}}
 
-=== Configuración básica ===
+=== Basic configuration ===
 
-{{Package|logcheck}} crea un usuario propio llamado "logcheck" para evitar que se lance como root. De hecho, no se permitirá la ejecución de logcheck como root. Para permitirle el análisis de los registros, necesitará asegurarse
-de que logcheck pueda leerlos. A continuación se muestra un ejemplo para {{Package|syslog-ng}}: 
+<code>logcheck</code> creates a separate user "logcheck" to avoid running as root. Actually, it will refuse to run as root. To allow it to analyze the logs, you need to make sure they are readable by logcheck. Here is an example for<code>syslog-ng</code> : 
 
 {{Code|/etc/syslog-ng/syslog-ng.conf snippet|<pre>
-options { 
-    owner(root);
-
-    ## (Hacer que el grupo logcheck pueda leer los ficheros de registro)
-    group(logcheck);
-    perm(0640);
+options {
+        owner(root);
+  
+        ## (Make log files group-readable by logcheck)
+        group(logcheck);
+        perm(0640);
 };
 </pre>
 }}
 
-Ahora recargue la configuración y asegúrese de que los cambios funcionan como se espera. 
+Now reload the configuration and make sure the changes work as expected. 
 
 {{RootCmd|/etc/init.d/syslog-ng reload
 |ls -l /var/log/messages|output=<pre>
@@ -47,61 +45,65 @@ Ahora recargue la configuración y asegúrese de que los cambios funcionan como 
 </pre>
 }}
 
-Ahora debería ajustar algunas configuraciones básicas de logcheck en {{Path|/etc/logcheck/logcheck.conf}}. 
+You should now adjust some basic <code>logcheck</code> settings in {{Path|/etc/logcheck/logcheck.conf}} . 
 
 {{Code|Basic /etc/logcheck/logcheck.conf setup|<pre>
-# Controla el nivel de filtrado:
-# Puede definirse como "workstation", "server" o "paranoid" para diferentes
-# niveles de filtrado. Si no se define se toma "server" por defecto.
-## (El nivel "workstation" incluye el nivel "server" y el nivel "server" incluye el nivel "paranoid". El nivel "paranoid" no filtra apenas los mensajes)
+# Controls the level of filtering:
+# Can be Set to "workstation", "server" or "paranoid" for different
+# levels of filtering. Defaults to server if not set.
+## (The workstation level includes server, and server includes paranoid.
+The paranoid level filters almost no messages)
 REPORTLEVEL="server"
-
-# Controla la dirección de correo de envíos:
-# *NOTA* ¡El guión no asigna un valor por defecto a esta variable!
-# Se debería enviar a una cuenta fuera del sitio "direccion@algun.dominio.tld"
-## (Asegúrese de que recibe los mensajes de correo electrónico de logcheck. Se recomienda realizar pruebas)
+  
+# Controls the address mail goes to:
+# *NOTE* the script does not set a default value for this variable!
+# Should be set to an offsite "emailaddress@some.domain.tld"
+## (Make sure you can receive the logcheck e-mails. Testing is strongly
+recommended)
 SENDMAILTO="root"
-
-# Controla si se lanza syslog-summary en cada sección.
-# Use "1" de forma alternativa para habilitar información extra de resumen.
-# CONSEJO: necesitará instalar syslog-summary.
-## (Si obtiene un montón de mensajes similares en el registro puede que quiera instalar app-admin/syslog-summary y habilitar este ajuste)
+  
+# Controls if syslog-summary is run over each section.
+# Alternatively, set to "1" to enable extra summary.
+# HINT: syslog-summary needs to be installed.
+## (If you get a lot of similar messages in the logs, you
+may want to install app-admin/syslog-summary and enable
+this setting)
 SYSLOGSUMMARY=0
 </pre>
 }}
 
-También tiene que indicarle a logcheck qué fichero sde registro debe escanear ({{Path|/etc/logcheck/logcheck.logfiles}}). 
+You also have to tell <code>logcheck</code> which log files to scan ( {{Path|/etc/logcheck/logcheck.logfiles}} ). 
 
-{{Code|Configuración básica de /etc/logcheck/logcheck.logfiles|
-<pre>
-## (Esto es un ejemplo para syslog-ng)
+{{Code|Basic /etc/logcheck/logcheck.logfiles setup|<pre>
+## (This is an example for syslog-ng)
 /var/log/messages
 </pre>
 }}
 
-Por último, habilite el trabajo cron de logcheck. 
+Finally, enable the logcheck cron job. 
 
 {{RootCmd|nano -w /etc/cron.hourly/logcheck.cron}}
 
-{{Note/es|Para más información sobre cron lea [[Cron/es|guía de Cron]].}}
+{{Note|For more information about cron read the [https://wiki.gentoo.org/wiki/Cron Cron Guide] .}}
 
-¡Enhorabuena! Ahora podrá obtener información regular sobre mensajes enviados al registro a través de su dirección de correo electrónico. Un ejemplo tiene este aspecto: 
+Congratulations! Now you will be regularly getting important log messages by email. An example message looks like this: 
 
 {{Code|Example logcheck message|<pre>
 System Events
 =-=-=-=-=-=-=
-Feb 10 17:13:53 localhost kernel: [30233.238342] conftest[25838]: segfault at 40 ip 40061403 sp bfc443c4 error 4 in libc-2.10.1.so[4003e000+142000]
-Feb 11 12:31:21 localhost postfix/pickup[18704]: fatal: could not find any active network interfaces 
+Feb 10 17:13:53 localhost kernel: [30233.238342] conftest[25838]: segfault at 40 ip 40061403 sp bfc443c4 error 4
+in libc-2.10.1.so[4003e000+142000]
+Feb 11 12:31:21 localhost postfix/pickup[18704]: fatal: could not find any active network interfaces
 Feb 11 12:31:22 localhost postfix/master[3776]: warning: process //usr/lib/postfix/pickup pid 18704 exit status 1
 Feb 11 12:31:22 localhost postfix/master[3776]: warning: //usr/lib/postfix/pickup: bad command startup -- throttling
 </pre>
 }}
 
-== Resolución de problemas ==
+== Troubleshooting ==
 
-=== Consejos generales ===
+=== General tips ===
 
-Puede usar la opción <code>-d</code> de logcheck para mostrar más información de depuración. Por ejemplo: 
+You can use the logcheck's <code>-d</code> switch to display more debugging information. Example: 
 
 {{RootCmd|su -s /bin/bash -c '/usr/sbin/logcheck -d' logcheck|output=<pre>
 D: [1281318818] Turning debug mode on
@@ -121,7 +123,8 @@ D: [1281318825] Setting the Intro
 D: [1281318825] Checking for security alerts
 D: [1281318825] greplogoutput: kernel
 ...
-D: [1281318825] greplogoutput: returning 1 D: [1281318825] Checking for security events
+D: [1281318825] greplogoutput: returning 1
+D: [1281318825] Checking for security events
 ...
 D: [1281318825] greplogoutput: su
 D: [1281318825] greplogoutput: Entries in checked
@@ -137,4 +140,10 @@ D: [1281318835] cleanup: Removing - /tmp/logcheck.uIFLqU
 </pre>
 }}
 
-{{Migrated|originalauthors=phajdan.jr, nightmorph}}
+== Acknowledgements ==
+
+We would like to thank the following authors and editors for their contributions to this guide:
+
+
+* phajdan.jr
+* nightmorph
