Created page with "Witaj na stronie kanału [irc://irc.gentoo.org/gentoo-wiki #gentoo-pl @ Freenode]! Tak jak na wszystkich kanałach Freenode używamy kodowania UTF-8. Do wklejania treści dłu..."

--- a/Gentoo-pl.mw
+++ b/Gentoo-pl.mw
@@ -1,70 +1,22 @@
-'''Witaj na stronie kanału [irc://chat.freenode.net/gentoo-pl #gentoo-pl w sieci Freenode]!'''
-
-Prosimy o zapoznanie się z [[Gentoo-pl/regulamin|regulaminem kanału]] lub przynajmniej [[#Podstawowe zasady|podstawowymi zasadami]] wymienionymi poniżej.
-
-Kanał powstał w celu wymiany wiedzy i doświadczeń pomiędzy polskimi użytkownikami Gentoo. Należy do polskiej społeczności Gentoo i przez tę społeczność jest zarządzany. Jest kanałem oficjalnym, zarejestrowanym przez zespół Gentoo Developer Relations 22 marca 2003 roku. Władze kanału to najbardziej doświadczeni użytkownicy tej dystrybucji oraz osoby aktywnie ją rozwijające.
-
-== Podstawowe zasady ==
-
-# Tak jak na wszystkich kanałach Freenode używamy kodowania UTF-8.
-# Używamy polskich znaków, vide [http://www.youtube.com/watch?v=T2iISWltdzc Łona - ĄĘ].
-# Do wklejania treści dłuższych niż 2 linijki polecamy [http://wklej.org wklej.org].
-# Linki dłuższe niż 64 znaki skracamy w [http://tiny.pl tiny.pl] lub podobnym serwisie.
-# Linki, których nie wypada otwierać w pracy, należy otagować <code>nsfw</code> lub <code>nws</code>.
-# Nieznajomość [[Gentoo-pl/regulamin|pełnego regulaminu]] nie zwalnia z jego przestrzegania.
+Witaj na stronie kanału [irc://irc.gentoo.org/gentoo-wiki #gentoo-pl @ Freenode]! Tak jak na wszystkich kanałach Freenode używamy kodowania UTF-8. Do wklejania treści dłuższych niż 2 linijki polecamy [http://wklej.org wklej.org].
 
 == Naucz się pisać po polsku z #gentoo-pl ==
 
 # Nie piszemy spacji przed znakami interpunkcyjnymi.
 # Piszemy „na razie” i „na pewno”.
-# Na temat „tę” i „tą”:
-#* https://antoszka.pl/te.jpg
-#* [http://katowice.naszemiasto.pl/artykul/177473,jan-miodek-widze-te-dziewczyne,id,t.html prof. Jan Miodek, „Widzę tę dziewczynę”]
-# Front ochrony dopełniacza:
-#* [http://www.polskieradio.pl/9/305/Artykul/383220,Biernik-czy-dopelniacz- Biernik czy dopełniacz? - Trójka - polskieradio.pl]
-#* [http://www.youtube.com/watch?v=kNoSXyzzSwM prof. Jerzy Bralczyk, „Wgad – Problemy z dopełniaczem i biernikiem”]
-# [http://wizualny.wordpress.com/2013/05/20/czcionka-font-kroj-typeface-nazewnictwo/ Czcionka, font, krój czy typeface? O zagmatwanym nazewnictwie]
+# http://a01.pl/te.jpg
+# http://is.gd/lRCgg7
+# http://tiny.pl/hpf8h
+
+== Pomocne linki ==
+
+# Alternatywna mapa pl do X-ów: http://a01.pl/plantoni
+# Pokrzaczyły się polskie literki? http://krzaki.blizinski.pl/
 
 == FAQ ==
 
-=== Jak ustawić polskie znaki w X-ach? ===
+# Popsuły mi się sterowniki od X-ów, co robić?
 
-Utwórz plik {{Path|/etc/X11/xorg.conf.d/10-keyboard.conf}}, jeśli go jeszcze nie masz, i ustaw <code>XkbLayout</code> na <code>pl</code>, jak niżej:
-
-{{FileBox|filename=/etc/X11/xorg.conf.d/10-keyboard.conf|lang=xorg.conf|1=
-Section "InputClass"
-        Identifier "keyboard-all"
-        Driver "evdev"
-        Option "XkbLayout" "pl"
-        Option "XkbVariant" "basic"
-        MatchIsKeyboard "on"
-EndSection}}
-
-Następnie zrestartuj X-y.
-
-=== Popsuły mi się sterowniki od X-ów, co robić? ===
-
-Na przyszłość zainstaluj sobie {{Package|app-portage/gentoolkit}} i używaj <code>eread</code> do przeglądania logów po aktualizacji, a na razie masz:
-
-{{RootCmd|emerge @x11-module-rebuild}}
-
-=== Jak ustawić alternatywną mapę do X-ów? ===
-
-Zrobimy to na przykładzie mapy antoszki.
-
-# http://antoszka.pl/plantoni zapisz sobie jako {{Path|plantoni}} w katalogu {{Path|/share/X11/xkb/symbols/}}.
-# Utwórz plik {{Path|/etc/X11/xorg.conf.d/10-keyboard.conf}}, jeśli go jeszcze nie masz, i ustaw <code>XkbLayout</code> na <code>plantoni</code>, jak niżej:
-
-{{FileBox|filename=/etc/X11/xorg.conf.d/10-keyboard.conf|lang=xorg.conf|1=Section "InputClass"
-        Identifier "keyboard-all"
-        Driver "evdev"
-        Option "XkbLayout" "plantoni"
-        Option "XkbVariant" "basic"
-        MatchIsKeyboard "on"
-EndSection}}
-
-== Przydatne linki ==
-
-# Alternatywna mapa pl do X-ów: http://antoszka.pl/plantoni
-# Pokrzaczyły się polskie literki? http://krzaki.blizinski.pl/
-# http://without-systemd.org/
+:Na przyszłość zainstaluj sobie '''app-portage/gentoolkit''' i używaj '''eread''' do przeglądania logów po aktualizacji, a na razie masz:
+:
+:{{RootCmd|emerge @x11-module-rebuild}}
