created an article for the LXQt desktop environment

--- a/LXQt.mw
+++ b/LXQt.mw
@@ -1,123 +1,14 @@
 {{InfoBox stack
 |{{InfoBox homepage|http://lxqt.org/|header=true}}
-|{{InfoBox gitweb|http://git.lxde.org/|raw=true}}
-|{{InfoBox github|lxde/lxqt}}
 }}
 
-'''LXQt''' is [[Article description::a lightweight desktop environment based on the Qt toolkit.]] It is the result of the merge between the LXDE-Qt and the Razor-qt projects.
+'''LXQt''' is a lightweight desktop environment based on the Qt toolkit. It is the result of the merge between the LXDE-Qt and the Razor-qt projects.
 
 == Installation ==
 
-=== Emerge ===
+You can get the complete LXQt desktop environment by installing the {{Package|lxqt-base/lxqt-meta}} package:
 
-Get the complete LXQt desktop environment by installing the {{Package|lxqt-base/lxqt-meta}} package:
-
-{{Emerge|lxqt-base/lxqt-meta}}
-
-=== Keywords ===
-
-LXQt has been stable for amd64 and x86 since version 0.13.0 so normally no keywords are needed. 
-
-However, if you use another architecture, it is necessary to add a few packages to {{Path|package.accept_keywords}}:
-
-{{FileBox|filename=/etc/portage/package.accept_keywords/lxqt|1=
-lxqt-base/*
-media-gfx/lximage-qt
-x11-misc/obconf-qt
-x11-misc/pcmanfm-qt
-}}
-
-Additional packages may need keyworded; {{c|emerge}} will provide current package keywording information if it is the case.
-
-== Configuration ==
-
-=== Launching LXQt with startx ===
-
-The {{c|startlxqt}} command launches LXQt.
-
-{{FileBox|filename=~/.xinitrc|lang=bash|1=
-exec ck-launch-session startlxqt
-}}
-
-{{c|ck-launch-session}} is needed to be able to shutdown or reboot the system from the LXQt menu.
-
-You may also need to start [[D-Bus]] manually, for example if notifications are not working or if there are several {{c|dbus-launch}} processes in the output from {{c|pstree}}:
-
-{{FileBox|filename=~/.xinitrc|lang=bash|1=
-exec ck-launch-session dbus-launch --exit-with-session startlxqt
-}}
-
-Alternatively, the {{c|dbus}} service can be [[D-Bus#Services|started at boot time]].
-
-{{Note|Script execution will stop after the first line starting with {{c|exec}}, so put any other command you want to run '''above''' it.}}
-
-=== Changing the GTK+ themes ===
-
-The LXQt appearance settings GUI has no support for changing GTK+ themes, so you may want to install {{Package|lxde-base/lxappearance}} to take care of that.
-
-Alternatively, you can change the themes manually, for example using the GTK2_RC_FILES variable:
-{{FileBox|filename=~/.xinitrc|lang=bash|1=
-export GTK2_RC_FILES=/home/user/.themes/Drakfire\ Black/gtk-2.0/gtkrc
-exec startlxqt
-}}
-The [https://wiki.archlinux.org/index.php/GTK%2B GTK+ page of the Arch Linux wiki] has more information for configuring GTK+2 and GTK+3 themes.
-
-If you want Qt 4 applications to use your GTK+2 theme, make sure that {{Package|dev-qt/qtgui}} is installed with the <var>gtkstyle</var> USE flag, and select the {{c|GTK+}} widget style in the LXQt appearance settings. For Qt 5 applications you will need (since the update to Qt 5.7) to install {{c|x11-themes/qtstyleplugins}} from the {{c|abendbrot}} overlay to get the GTK+ style.
-
-=== Automounting volumes ===
-
-By default, LXQt tries to automount every attached disk at startup and when they are plugged in. It may result in unwanted popup windows asking for the root password to mount disks.
-
-The automount options are located in the PCManFM file manager settings:
-
-* In the applications menu, open {{Path|Accessories → PCManFM File Manager}}.
-* Select the {{c|Edit->Preferences}} menu item.
-* Click on {{c|Volume}}.
-* Disable or enable the desired features.
-
-=== Adding custom actions to PCManFM-Qt ===
-
-PCManFM-Qt supports the [http://www.nautilus-actions.org/?q=node/377 desktop file specification extension] so it is possible to add custom actions to the contextual menu for files and directories.
-
-{{Package|x11-libs/libfm}} and {{Package|x11-libs/libfm-extra}} v1.2.4 or above are required, and the <var>vala</var> USE flag must be enabled:
-{{FileBox|filename=/etc/portage/package.use/lxqt|1=
-x11-libs/libfm vala
-}}
-
-Rebuilding the package can be done with:
-{{RootCmd|emerge -1a libfm}}
-
-Once this is done, special .desktop files can be created in {{Path|~/.local/share/file-manager/actions/}}. For example here is a simple action that will pop up a notification with the path to the selected file or folder:
-{{FileBox|filename=~/.local/share/file-manager/actions/test.desktop|1=
-[Desktop Entry]
-Name = Test action
-Profiles = on_icon;
-
-[X-Action-Profile on_icon]
-Exec = notify-send "You selected %f"
-}}
-
-PCManFM-Qt needs to be restarted to become aware of any change made to the custom actions. The safest and simplest way is to logout and login again (restart LXQt).
-
-Alternatively it is possible to exit all instances of PCManFM-Qt with {{c|pcmanfm-qt -q}} before launching it again, but be aware that it will likely switch to a different set of settings (it can use two different config directories, one "default" and one "lxqt", as you can see in {{Path|~/.config/pcmanfm-qt/}}) and for example automount volumes which may cause issues if you are not careful.
-
-== Usage ==
-
-=== Applications ===
-
-Any Qt application can be used with LXQt, but if Qt applications that do not depend on any component of KDE are preferred please see the [[Qt Desktop applications]] article.
-
-== Troubleshooting ==
-
-=== Support ===
-
-Support for LXQt on Gentoo can be found in the {{IRC|gentoo-qt}} Freenode IRC channel. Bugs should be reported at the [https://bugs.gentoo.org/ Gentoo's Bugzilla].
-
-The official IRC channel for LXQt is {{IRC|lxde}} on Freenode.
-
-== See also ==
-
-* {{See also|Xfce}}
+{{Emerge|lxqt-meta}}
 
 [[Category:Desktop environment]]
 [[Category:Qt]]
