created an article for the GTK+ toolkit

--- a/GTK.mw
+++ b/GTK.mw
@@ -1,23 +1,13 @@
-{{Stub}}
-
 {{InfoBox stack
-|{{InfoBox homepage|https://www.gtk.org/|header=true}}
+|{{InfoBox homepage|http://www.gtk.org/|header=true}}
 |{{InfoBox wikipedia}}
 }}
 
-'''GTK''' (the GIMP Toolkit) is [[Article description::a toolkit for creating graphical user interfaces.]] It is part of the GNU Project.
-
-== Installation ==
-
-Users can install the GTK libraries with the following command:
-
-{{Emerge|x11-libs/gtk+}}
-
-Some applications may optionally be built with support for a GTK interface when enabling the <code>gtk</code> <var>USE</var> flag.
-Users may even choose to enable GTK support for all packages in {{Path|/etc/portage/make.conf}}.
+'''GTK+''' (the GIMP Toolkit) is a toolkit for creating graphical user interfaces. It is part of the GNU Project.
 
 == Configuration ==
 
-The following programs can be used to change the appearance of applications using the GTK toolkit:
+The following programs can be used to change the appearance of applications using the GTK+ toolkit:
 
 * {{Package|lxde-base/lxappearance}} - part of the LXDE desktop environment
+* Feel free to add other programs
