Created page with "Still working on installation, wiki will come soon [[File:Lenovo_Yoga_13.jpg|350px|right]]  == Hardware Status == {| class="wikitable" | '''Device''' | '''Works?''' | '''Note'..."

--- a/Lenovo_IdeaPad_yoga_13_(i5).mw
+++ b/Lenovo_IdeaPad_yoga_13_(i5).mw
@@ -1,137 +1,45 @@
-{{InfoBox stack
-|{{InfoBox wikipedia|Lenovo_IdeaPad_Yoga_13|header=true}}
-}}
-Still working on installation, wiki will come soon.
+Still working on installation, wiki will come soon
 [[File:Lenovo_Yoga_13.jpg|350px|right]]
 
-== Hardware ==
-
-=== Laptop Specifications ===
-
-{| class="table"
+== Hardware Status ==
+{| class="wikitable"
+| '''Device'''
+| '''Works?'''
+| '''Note'''
 |-
-! style="text-align:center;" | Device
-! style="text-align:center;" | Model
-! style="text-align:center;" | Works
-! style="text-align:center;" | Notes
-|-
-| Intel® Core™ i5
-| 3317U, 1.7G/2.6G, 4T, 3M (Ivy Bridge)
-| {{Yes}}
+| Intel® Core™ i5-3317U, 1.7G/2.6G, 4T, 3M
+| {{}}
 | 
 |-
-| Intel® HD Graphics
-| 4000
-| {{Yes}}
-| i915 kernel driver
+| Intel® HD Graphics 4000 
+| {{}}
+| 
 |-
-| LG 13.3"1600×900
-| LP133WD2 (SL)(B1) (IPS)
-| {{Yes}}
-| intel_backlight
+| Intel HDA 
+| {{}}
+| 
+|-
+| Ethernet
+| {{}}
+| 
 |-
 | Wireless
-| Realtek RTL8723AU
-| {{Yes}}
-|  Support Added To Linux 3.15 through r8723au kernel driver
+| {{}}
+|  
 |-
 | Bluetooth
-| Realtek usb
-| {{Yes}}
+| {{}}
 | 
 |-
 | Camera
-| Lenovo
-| {{Yes}}
+| {{}}
 | 
 |-
 | Card Reader
-|
-| {{Partial|Not tested}}
+| {{}}
 | 
 |-
 | Touchscreen
+| {{}}
 |
-| {{Partial}}
-| Singletouch working
 |}
-
-==== Hardware ====
-
-{{RootCmd|lspci|output=
-<pre>
-00:00.0 Host bridge: Intel Corporation 3rd Gen Core processor DRAM Controller (rev 09)
-00:02.0 VGA compatible controller: Intel Corporation 3rd Gen Core processor Graphics Controller (rev 09)
-00:04.0 Signal processing controller: Intel Corporation 3rd Gen Core Processor Thermal Subsystem (rev 09)
-00:14.0 USB controller: Intel Corporation 7 Series/C210 Series Chipset Family USB xHCI Host Controller (rev 04)
-00:16.0 Communication controller: Intel Corporation 7 Series/C210 Series Chipset Family MEI Controller #1 (rev 04)
-00:1a.0 USB controller: Intel Corporation 7 Series/C210 Series Chipset Family USB Enhanced Host Controller #2 (rev 04)
-00:1b.0 Audio device: Intel Corporation 7 Series/C210 Series Chipset Family High Definition Audio Controller (rev 04)
-00:1d.0 USB controller: Intel Corporation 7 Series/C210 Series Chipset Family USB Enhanced Host Controller #1 (rev 04)
-00:1f.0 ISA bridge: Intel Corporation QS77 Express Chipset LPC Controller (rev 04)
-00:1f.2 SATA controller: Intel Corporation 7 Series Chipset Family 6-port SATA Controller [AHCI mode] (rev 04)
-00:1f.3 SMBus: Intel Corporation 7 Series/C210 Series Chipset Family SMBus Controller (rev 04)
-00:1f.6 Signal processing controller: Intel Corporation 7 Series/C210 Series Chipset Family Thermal Management Controller (rev 04)
-</pre>
-}}
-
-== Configuration details ==
-
-=== Graphics ===
-
-See [[Intel]].
-
-==== Feature support ====
-
-{| class="table"
-|-
-! style="text-align:center;" | Chipset
-! style="text-align:center;" | OpenGL
-! style="text-align:center;" | OpenGL ES
-! style="text-align:center;" | OpenCL
-! style="text-align:center;" | [[VAAPI]]
-! style="text-align:center;" | USE
-|-
-| Ivy Bridge
-| {{Yes|3.1}}
-| {{Yes|2.0 (3.0)<sup>1</sup>}}
-| {{Yes|1.1<sup>2</sup>}}
-| {{Yes}}
-| VIDEO_CARDS="intel i965"
-|}
-
-=== Display ===
-
-Backlight control through brightness buttons is enabled by adding the <code>acpi_backlight=vendor</code> into the {{Path|/etc/default/grub}}, i.e. <code>GRUB_CMDLINE_LINUX_DEFAULT="acpi_backlight=vendor"</code>
-
-=== Wireless ===
-
-==== Method 1: Using the kernel driver ====
-The r8723au driver provides support for the Realtek RTL8723AU WiFi chipset. The RTL8723AU is the USB version of the Realtek 8723A chipset, with ID of 0bda:1724. Since the version 3.15 of the kernel, the RTL8723AU is supported in the staging drivers. 
-
-'''Step 1ː''' Configure and compile kernel 
-{{KernelBox|1=
-<M>   Realtek RTL8723AU Wireless LAN NIC driver  
-[*]     Realtek RTL8723AU AP mode
-[*]     Realtek RTL8723AU BlueTooth Coexistence
-}}
-
-{{Note|The option "Realtek RTL8723AU Wireless LAN NIC driver" in the section "Device Drivers->Staging drivers" appears if the option "RF switch subsystem support" in the "Networking options" is enabled.}}
-{{KernelBox|1=
-<M>   RF switch subsystem support  --->
-}}
-
-'''Step 2:''' The gentoo package {{Package|sys-kernel/linux-firmware}} is required.
-{{emerge|sys-kernel/linux-firmware}}
-
-==== Method 2: Using the lwfinger driver ====
-
-{{RootCmd
-|git clone git@github.com:lwfinger/rtl8723au.git
-|cd rtl8723au/
-|make
-|make install
-|modprobe rtl8723au
-}}
-
-[[Category:Laptops]]
