Created page with "[[File:packard-bell-pav80.jpg|350px|right]]  == Hardware Status == {| class="wikitable" | '''Device''' | '''Works?''' | '''Note''' |- |  | {{}} |  |- |   | {{}} |  |- |  | {{}..."

--- a/Packard_Bell_DOT_SE_(PAV80).mw
+++ b/Packard_Bell_DOT_SE_(PAV80).mw
@@ -1,50 +1,45 @@
 [[File:packard-bell-pav80.jpg|350px|right]]
 
-== Hardware status ==
-
-{| class="table"
+== Hardware Status ==
+{| class="wikitable"
+| '''Device'''
+| '''Works?'''
+| '''Note'''
 |-
-! style="text-align:center;" | Device
-! style="text-align:center;" | Works
-! style="text-align:center;" | Notes
-|-
-| Atom CPU N550
-| {{yes}}
-| Tested in 32-bit 
-|-
-| Integrated Graphics 
-| {{yes}}
+| 
+| {{}}
 | 
 |-
-| Intel HDA
-| {{yes}}
+|  
+| {{}}
+| 
+|-
+| 
+| {{}}
 | 
 |-
 | Ethernet
-| {{yes}}
+| {{}}
 | 
 |-
 | Wireless
-| {{yes}}
+| {{}}
 |  
 |-
 | Bluetooth
-| {{Partial|Not tested}}
+| {{}}
 | 
 |-
 | Camera
-| {{Partial|Not tested}}
+| {{}}
 | 
 |-
 | Card Reader
-| {{yes}}
+| {{}}
 | 
 |}
 
-== Hardware ==
-
-=== PCI ===
-
+=== Hardware ===
 {{RootCmd|lspci|output=<pre>
 00:00.0 Host bridge: Intel Corporation Atom Processor D4xx/D5xx/N4xx/N5xx DMI Bridge (rev 02)
 00:02.0 VGA compatible controller: Intel Corporation Atom Processor D4xx/D5xx/N4xx/N5xx Integrated Graphics Controller (rev 02)
@@ -65,19 +60,7 @@
 02:00.0 Network controller: Qualcomm Atheros AR9285 Wireless Network Adapter (PCI-Express) (rev 01)
 </pre>}}
 
-=== USB ===
 
-{{RootCmd|lsusb|output=<pre>
-Bus 001 Device 006: ID 0cf2:6250 ENE Technology, Inc. SD card reader (UB6250)
-Bus 001 Device 003: ID 0402:9665 ALi Corp. Gateway Webcam
-Bus 001 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
-Bus 005 Device 001: ID 1d6b:0001 Linux Foundation 1.1 root hub
-Bus 004 Device 001: ID 1d6b:0001 Linux Foundation 1.1 root hub
-Bus 003 Device 001: ID 1d6b:0001 Linux Foundation 1.1 root hub
-Bus 002 Device 001: ID 1d6b:0001 Linux Foundation 1.1 root hub
-</pre>}}
-
-=== CPU ===
 
 {{RootCmd|lscpu|output=<pre>
 Architectuur:          i686
@@ -101,70 +84,5 @@ L1d-cache:             24K
 L1i-cache:             32K
 L2-cache:              512K
 lscpu
+
 </pre>}}
-
-== Mainboard and processor==
-
-{{FileBox|filename=/etc/portage/make.conf|lang=bash|1=
-CHOST="i686-pc-linux-gnu"
-CFLAGS="-march=atom -O2 -fomit-frame-pointer -pipe"
-CXXFLAGS="${CFLAGS}"
-MAKEOPTS="-j5"
-}}
-
-'''Kernel'''
-{{KernelBox|title=Intel Atom|
-Processor type and futures --->
- Processor family (Intel Atom)
- [*] Machine Check / overheating reporting
- [*]    Intel MCE features
- 
-Bus options --->
- [*] CPI support
- [*]    CPI Express Port Bus support
- [*] ISA support
-
-Device Drivers -->
- {*} Hardware monitoring support -->
-  [*] Intel Core/Core2/Atom temperature sensor
-}}
-
-== Ethernet ==
-
-'''Kernel'''
-{{KernelBox|title=Qualcomm Atheros AR8152 v1.1 Fast Ethernet (rev c1)|
-[*] Networking support --->
- 
-Device Drivers --->
- [*] Network device support --->
-  [*] Ethernet driver support --->
-   [*] Atheros devices
-    <M>  Atheros L1C Gigabit Ethernet support  
-}}
-
-== Card reader ==
-
-'''Kernel'''
-{{KernelBox|title=Card reader|
-Device Drivers --->
- <*> MMC/SD/SDIO card support --->
-  <*> MMC block device driver 
- USB Support --->
-  <*> USB ENE card reader support
-}}
-
-== Webcam ==
-
-'''Kernel'''
-{{KernelBox|title=Webcam|
-Device Drivers --->
- <*> Multimedia support --->
-  <*> Cameras/video grabbers support 
-  [*] Media USB Adapters --->
-   <M> USB Video Class (UVC)
-    [*] UVC input events device support
-   <*> GSPCA based webcams --->
-    <M> ALI USB m5602 Camera Driver
-}}
-
-[[Category:Netbooks]]
